marca registrada e ano correto

--- a/Contato.html
+++ b/Contato.html
@@ -37,7 +37,7 @@
         </main>
         <footer>
             <div>Porto Alegre - RS, Brazil</div>
-            <div>Matheus - 2021</div>
+            <div>Matheus - 2022 &reg;</div>
         </footer>
     </div>
 </body>
