--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
         </main>
         <footer>
             <div>Porto Alegre - RS, Brazil</div>
-            <div>Matheus - 2021</div>
+            <div>Matheus - 2022 &reg;</div>
         </footer>
     </div>
 </body>
